# svn-clean

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  Program.cs  README.md  platform.h  platform_posix.cpp  platform_win32.cpp  svn-clean.cpp  svn-clean.csproj  svn-clean.sln  svn-clean.vcxproj  svn-clean.vcxproj.filters  targetver.h
Properties/: AssemblyInfo.cs
src/: platform.h  platform_posix.cpp  platform_win32.cpp  resource.h  svn-clean.cpp  svn-clean.rc  svn-clean.vcxproj  svn-clean.vcxproj.filters  targetver.h  version.h  version.h.in
